<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".ui.screens.DonationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/donation_top_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            tools:ignore="UselessParent">


            <androidx.cardview.widget.CardView
                android:id="@+id/btn_home"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/home_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_home" />

                    <TextView
                        android:id="@+id/txt_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/secondaryColor"
                        android:textSize="14sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="170dp"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:layout_marginEnd="40dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_devadha"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_ayyappan"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitEnd" />

                <TextView
                    android:id="@+id/txt_devadha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/melkavu_devi"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/txt_fill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:text="@string/fill_out_your_details"
                android:textColor="@color/secondaryColor"
                android:textSize="28sp" />


            <TextView
                android:id="@+id/txt_donate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_fill"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/donation_amount"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/edit_txt_donation"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/txt_donate"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_silver_boarder"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/_10_000"
                android:inputType="number"
                android:maxLength="7"
                android:paddingEnd="7dp"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:imeOptions="actionNext"
                tools:ignore="RtlSymmetry" />


            <LinearLayout
                android:id="@+id/lin_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_txt_donation"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_phno"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/phone_number"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/editext_boarder">

                            <RelativeLayout
                                android:id="@+id/phone_area"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:background="@drawable/bg_phone_no">

                                <ImageView
                                    android:id="@+id/img_india"
                                    android:layout_width="20dp"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_marginStart="10dp"
                                    android:src="@drawable/ic_india" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:layout_toRightOf="@+id/img_india"
                                    android:fontFamily="@font/poppins_regular"
                                    android:text="@string/_91"
                                    android:layout_marginTop="20dp"
                                    android:textColor="@color/black"
                                    android:textSize="14sp" />

                            </RelativeLayout>


                            <EditText
                                android:id="@+id/edit_phno"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:layout_marginEnd="1dp"
                                android:layout_marginBottom="2dp"
                                android:layout_toEndOf="@+id/phone_area"
                                android:hint="@string/phone_number"
                                android:background="@drawable/edit_text_dummy_bg"
                                android:inputType="phone"
                                android:maxLength="10"
                                android:imeOptions="actionNext"
                                android:paddingStart="7dp" />

                        </RelativeLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/name"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/editext_boarder">


                            <EditText
                                android:id="@+id/edit_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:layout_marginBottom="2dp"
                                android:layout_marginStart="1dp"
                                android:layout_marginEnd="1dp"
                                android:hint="@string/name"
                                android:background="@drawable/edit_text_dummy_bg"
                                android:inputType="text"
                                android:maxLength="10"
                                android:imeOptions="actionDone"
                                android:paddingStart="7dp" />

                        </RelativeLayout>


                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/txt_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lin_user"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="5dp"
                android:text="@string/select_your_janma_nakshatra"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_star"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/btn_pay"
                android:layout_below="@+id/txt_star"
                android:layout_marginBottom="10dp"
                android:scrollbars="vertical" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:backgroundTint="@color/light_grey"
                android:enabled="false"
                android:text="@string/pay"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:cornerRadius="10dp"
                tools:ignore="RtlSymmetry" />


        </RelativeLayout>


    </LinearLayout>

</LinearLayout>


