<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="100"
    tools:context=".ui.screens.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_map" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:background="@drawable/ic_login_bg">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_login_ohm" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:alpha="0.1"
                android:contentDescription="@string/todo"
                android:scaleType="fitEnd"
                android:src="@drawable/ic_login_bottom" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:scaleType="fitEnd"
                android:src="@drawable/ic_login_top" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                tools:ignore="UselessParent">


                <TextView
                    android:id="@+id/tvLoginTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="40dp"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:text="@string/login_as_a_admin_user"
                    android:textColor="@color/primaryColor"
                    android:textSize="38sp" />

                <LinearLayout
                    android:id="@+id/lin_userId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvLoginTitle"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/ic_gradient_background"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_user"
                            app:tint="@color/white" />
                    </LinearLayout>


                    <EditText
                        android:id="@+id/edt_user_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_background"
                        android:hint="@string/user_id"
                        android:inputType="text"
                        android:padding="20dp"
                        android:textColor="#999"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lin_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lin_userId"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/ic_gradient_background"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_user"
                            app:tint="@color/white" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_background"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="20dp"
                        android:textColor="#999"
                        android:textSize="16sp" />

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_below="@+id/lin_pass"
                    app:cornerRadius="0dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="100dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/log_in"
                    android:backgroundTint="@color/primaryColor"
                    android:fontFamily="@font/montserrat_semibold"/>



            </RelativeLayout>


        </LinearLayout>



    </LinearLayout>


</RelativeLayout>